syntax = "proto3";
package tendermint.types;

option go_package = "github.com/tendermint/tendermint/proto/tendermint/types";

import "gogoproto/gogo.proto";
import "tendermint/crypto/keys.proto";

message ValidatorSet {
  repeated Validator validators          = 1;
  // Validator          proposer           = 2;   // This field has been removed in Ostracon.
  int64              total_staking_power = 3;
}

message VoterSet {
  repeated Validator validators         = 1;
  int64              total_staking_power = 2;
}

message Validator {
  bytes                       address           = 1;
  tendermint.crypto.PublicKey pub_key           = 2 [(gogoproto.nullable) = false];
  int64                       staking_power     = 3;
  int64                       proposer_priority = 4;
}

message SimpleValidator {
  tendermint.crypto.PublicKey pub_key       = 1;
  int64                       staking_power = 2;
}
